# lttp-tools

./: .cirrus.yml  .gitignore  .travis.yml  BUILD  Cargo.toml  README.md  WORKSPACE  rules.bzl
midi2spc/: .travis.yml  BUILD  Cargo.toml
midi2spc/cargo/: BUILD  crates.bzl
midi2spc/cargo/remote/: ansi_term-0.11.0.BUILD  atty-0.2.11.BUILD  autocfg-0.1.1.BUILD  backtrace-0.3.13.BUILD  backtrace-sys-0.1.28.BUILD  bitflags-1.0.4.BUILD  byteorder-1.2.7.BUILD  cc-1.0.28.BUILD  cfg-if-0.1.6.BUILD  clap-2.32.0.BUILD  either-1.5.0.BUILD  failure-0.1.5.BUILD  failure_derive-0.1.5.BUILD  ghakuf-0.5.1.BUILD  itertools-0.7.11.BUILD  itoa-0.4.3.BUILD  kernel32-sys-0.2.2.BUILD  libc-0.2.46.BUILD  log-0.3.9.BUILD  log-0.4.6.BUILD  pbr-1.0.1.BUILD  proc-macro2-0.4.24.BUILD  quote-0.6.10.BUILD  redox_syscall-0.1.50.BUILD  redox_termios-0.1.1.BUILD  rustc-demangle-0.1.13.BUILD  ryu-0.2.7.BUILD  serde-1.0.84.BUILD  serde_derive-1.0.84.BUILD  serde_json-1.0.35.BUILD  simple-error-0.2.1.BUILD  strsim-0.7.0.BUILD  syn-0.15.24.BUILD  synstructure-0.10.1.BUILD  termion-1.5.1.BUILD  textwrap-0.10.0.BUILD  time-0.1.42.BUILD  unicode-width-0.1.5.BUILD  unicode-xid-0.1.0.BUILD  vec_map-0.8.1.BUILD  (+5 more)
midi2spc/sample/: BUILD  dummy.smc  manifest.json  sample.txt  short.mid
midi2spc/src/: lib.rs  main.rs  manifest.schema.json
midi2spc/src/manifest/: mod.rs
midi2spc/src/midi/: mod.rs
midi2spc/src/nspc/: command.rs  instruments.rs  mod.rs  seqtree.rs  track.rs
midi2spc/src/rom/: mod.rs
midi2spc/tests/: test.rs
textconvert/: BUILD  Cargo.toml  schema.json
textconvert/cargo/: BUILD  crates.bzl
textconvert/cargo/remote/: aho-corasick-0.7.4.BUILD  ansi_term-0.11.0.BUILD  atty-0.2.11.BUILD  bimap-0.3.1.BUILD  bitflags-1.1.0.BUILD  cfg-if-0.1.9.BUILD  clap-2.33.0.BUILD  either-1.5.2.BUILD  env_logger-0.6.1.BUILD  humantime-1.2.0.BUILD  itertools-0.8.0.BUILD  itoa-0.4.4.BUILD  lazy_static-1.3.0.BUILD  libc-0.2.58.BUILD  log-0.4.7.BUILD  maplit-1.0.1.BUILD  memchr-2.2.0.BUILD  numtoa-0.1.0.BUILD  proc-macro2-0.4.30.BUILD  quick-error-1.2.2.BUILD  quote-0.6.12.BUILD  redox_syscall-0.1.54.BUILD  redox_termios-0.1.1.BUILD  regex-1.1.8.BUILD  ryu-1.0.0.BUILD  (+21 more)
textconvert/sample/: BUILD  input.json
textconvert/src/: main.rs
tilepatch/: BUILD  Cargo.toml  README.md
tilepatch/cargo/: crates.bzl
tilepatch/sample/: BUILD  dummy.sfc  manifest.csv  manifest_2bpp.csv
tilepatch/src/: main.rs
(+99 files in other folders)
