[package]
name = "midi2spc"
version = "0.1.0"
authors = ["Gus Prevas <kprevas@gmail.com>"]
edition = "2018"

#[lib]
#path = "fake_lib.rs"

[dependencies]
ghakuf = "0.5.1"
clap = "2.29.0"
itertools = "0.7.8"
byteorder = "1.2.7"
serde = "1.0.80"
serde_json = "1.0"
serde_derive = "1.0.80"
simple-error = "0.2.0"
pbr = "1.0.1"
nsasm = {path = "../nsasm"}

[raze]
workspace_path = "//midi2spc/cargo"
genmode = "Remote"
target = "x86_64-unknown-linux-gnu"

[raze.crates.syn.'0.15.24']
gen_buildrs = true

[raze.crates.proc-macro2.'0.4.24']
additional_flags = [
    "--cfg=use_proc_macro",
]