[package]
name = "textconvert"
version = "0.1.0"
authors = ["Gus Prevas <kprevas@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.29.0"
itertools = "0.8.0"
maplit = "1.0.1"
serde = "1.0.80"
serde_json = "1.0"
simple-error = "0.2.0"
textwrap = "0.11"

[raze]
workspace_path = "//textconvert/cargo"
genmode = "Remote"
target = "x86_64-unknown-linux-gnu"