[package]
name = "textconvert"
version = "0.1.0"
authors = ["Gus Prevas <kprevas@gmail.com>"]
edition = "2018"

#[lib]
#path = "fake_lib.rs"

[dependencies]
bimap = "0.3.1"
clap = "2.29.0"
itertools = "0.8.0"
log = "0.4.6"
env_logger = "=0.6.1"
regex = "1.1.8"
serde = "1.0.80"
serde_json = "1.0"
simple-error = "0.2.0"
unicode-segmentation = "1.3.0"

[raze]
workspace_path = "//textconvert/cargo"
genmode = "Remote"
target = "x86_64-unknown-linux-gnu"