[package]
name = "lttp_tilepatch"
version = "0.1.0"
authors = ["Gus Prevas <kprevas@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.29.0"
log = "0.4.6"
env_logger = "0.6.1"
prefix-tree = "0.1.0"
termion = "1.5.3"
png = "0.14.1"
itertools = "0.8.0"
simple-error = "0.2.0"

[raze]
workspace_path = "//tilepatch/cargo"
genmode = "Remote"
target = "x86_64-unknown-linux-gnu"